Minor changes to new configurator.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
   <head>
-    <meta http-equiv="REFRESH" content="0;url=web/check.php" />
+    <meta http-equiv="REFRESH" content="0;url=web/config.php" />
   </head>
   <body>
-    <p>This page will redirect you to the before install page.</p>
+    <p>This page will redirect you to the install page.</p>
   </body>
 </html>
