Renamed config to setup.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <meta http-equiv="REFRESH" content="0;url=web/config.php" />
+    <meta http-equiv="REFRESH" content="0;url=web/setup.php" />
   </head>
   <body>
     <p>This page will redirect you to the install page.</p>
